# fictionbook-thumbnailer

./: README  meson.build
src/: fictionbook-thumbnailer.c  fictionbook-thumbnailer.thumbnailer.in  meson.build
